--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   background: url(./assets/photo-1530908295418-a12e326966ba.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 code {
